--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "carrental",
+  "homepage": "https://usmanshahid5.github.io/car-rental-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -24,6 +25,7 @@
     "babel-plugin-macros": "^3.1.0",
     "date-fns": "^2.29.1",
     "eslint": "^8.20.0",
+    "gh-pages": "^4.0.0",
     "history": "^5.3.0",
     "postcss-flexbugs-fixes": "^5.0.2",
     "react": "^18.2.0",
@@ -47,7 +49,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
